fixed spacing for logged in button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,6 +103,10 @@ h1, h2, h3, h4, h5 {
     padding-left: 1rem
 }
 
+.logged-in {
+    padding-right: 2rem
+}
+
 main {
     padding: 2rem
 }
